# career-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  apply.py  apply_autofill.py  ats.py  career_agent.py  core.py  dashboard.html  jobs_search.py  localenv.py  pyproject.toml  requirements.txt  resume_io.py  server.py
.github/workflows/: ci.yml
tests/: redteam_external.md  test_apply.py  test_ats.py  test_core.py  test_humanize.py  test_jobs_search.py  test_redteam.py  test_resume_io.py  test_server.py
tests/fixtures/: injection_corpus.json
